--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Centrarium
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
+title: SynfulAI
+subtitle: "Unlock the power of Artificial Intelligence with SynfulAI - Innovative AI solutions tailored to revolutionise your buisiness "
 email: blcentra@gmail.com
 name: Ben Centra
 description: >
@@ -19,7 +19,7 @@ description: >
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "https://SynfulAI.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
