--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: SynfulAI
-subtitle: "Unlock the power of Artificial Intelligence with SynfulAI - Innovative AI solutions tailored to revolutionise your buisiness "
+subtitle: "Unlock the power of Artificial Intelligence with SynfulAI "
 email: blcentra@gmail.com
 name: Ben Centra
 description: >
