--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ exclude:
 # Site settings
 title: SynfulAI
 subtitle: "Unlock the power of Artificial Intelligence with SynfulAI "
-email: blcentra@gmail.com
-name: Ben Centra
+email: 
+name: 
 description: >
   A simple yet classy theme for your Jekyll website or blog.
 # Base URL of site (i.e. /blog). It should always start with a slash,
@@ -78,28 +78,28 @@ descriptions:
 social:
   - name: Twitter
     icon: twitter
-    username: TheBenCentra
+    username:
     url: 
     desc: Follow me on Twitter
-    share: true
+    share: false
 
   - name: Facebook
     icon: facebook
-    username: thebencentra
+    username:
     url: ""
     desc: Friend me on Facebook
-    share: true
+    share: false
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/SynfulAI
+    username:
+    url: 
     desc: Fork me on GitHub
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
+    username: SynfulAI
     url: https://www.linkedin.com/company/synfulai/
     desc: Connect with me on LinkedIn
     share: true
@@ -197,7 +197,7 @@ protocols:
     fb_image_height: 605
     fb_image_type: "image/png"
 
-    twitter_image: "/assets/logo.png"
+    twitter_image: ""
 
     os_repo: "https://github.com/bencentra/centrarium.com"
     os_rcs_type: "git"
