--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ subtitle: "Unlock the power of Artificial Intelligence with SynfulAI "
 email: 
 name: 
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+  SynfulAI is a leading innovator in ethical artificial intelligence solutions.
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
